--- a/chat-app-api/.env
+++ b/chat-app-api/.env
@@ -1,3 +1,3 @@
-MONGO_URL='mongodb+srv://admin:strongPassword@chat-app-cluster.jyf4rqt.mongodb.net/?retryWrites=true&w=majority&appName=chat-app-cluster'
+MONGO_URL='mongodb://localhost:27017/'
 JWT_SECRET='jwtsecret'
 CLIENT_URL='http://localhost:5173'
